@@ -473,6 +473,9 @@ LIBCXX_CMAKE_OPTIONS := \
 	-DLLVM_TEMPORARILY_ALLOW_OLD_TOOLCHAIN=ON \
 	-DLIBCXX_USE_COMPILER_RT=YES \
 	-DLIBCXXABI_USE_COMPILER_RT=YES \
+	-DLIBCXX_ENABLE_STATIC_ABI_LIBRARY=ON \
+	-DLIBCXX_STATICALLY_LINK_ABI_IN_STATIC_LIBRARY=ON \
+	-DLIBCXX_STATICALLY_LINK_ABI_IN_SHARED_LIBRARY=OFF \
 	$(CMAKE_EXTRA) \
 	$(CMAKE_EXTRA_LIBCXX)
 
